--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
         android:layout_height="wrap_content"
         android:text="ABOUT ME"
         android:id="@+id/button"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true"
+        android:onClick="clickAboutMe" />
 
     <ListView
         android:layout_width="wrap_content"
