--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="h1">30sp</dimen>
     <dimen name="h2">20sp</dimen>
 
+    <dimen name="icon">120dp</dimen>
+    <dimen name="image">200dp</dimen>
+
+
 </resources>
