--- a/app/src/main/res/layout/my_lisview.xml
+++ b/app/src/main/res/layout/my_lisview.xml
@@ -20,13 +20,15 @@
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/textView2"
-            android:textSize="@dimen/h1" />
+            android:textSize="@dimen/h1"
+            android:textColor="@color/text" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="New Text"
             android:id="@+id/textView3"
-            android:textSize="@dimen/h2" />
+            android:textSize="@dimen/h2"
+            android:textColor="@color/text" />
     </LinearLayout>
 </LinearLayout>
