--- a/app/src/main/res/layout/my_lisview.xml
+++ b/app/src/main/res/layout/my_lisview.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_list160">
 
     <ImageView
         android:layout_width="@dimen/icon"
